Fixed add points sign visibility

--- a/onehourinvestor/css/lesson.css
+++ b/onehourinvestor/css/lesson.css
@@ -74,7 +74,7 @@
 	border: 0px;
 }
 
-.money-add {
+#money-add {
 	position: absolute;
 	left: 45%;
 	top: 80%;
